CHORE(jobBoard): trying to fix jobBoard margin overflow

--- a/src/App.css
+++ b/src/App.css
@@ -79,17 +79,16 @@ input {
   left: 5%;
   bottom: 5%;
   /* max-width: 320px; */
-  /* max-height: 320px; */
+  max-height: 100%;
   background: #fff;
   box-shadow: 0 2px 4px rgba(0,0,0,0.3);
-  padding: 12px 24px;
+  padding: 12px 24px 12px 24px;
   margin: auto;
   font-size: 13px;
   line-height: 2;
   color: #6b6b76;
   outline: none;
   text-transform: uppercase;
-  flex: 1;
 }
 
 .job-board-info {
@@ -107,12 +106,17 @@ input {
   display: flex;
   flex: 1;
   flex-direction: column;
-  height: 100%;
+  height: 90%;
   padding-left: 1%;
+  /* padding-right: 1%; */
 }
 
 .job-list-and-description {
   display: flex;
-  height: 100%;
-  position: relative;
+  height: 90%;
+  position: absolute;
+  /* margin: auto; */
+  margin-right: 100px;
+  right: 50;
+  /* width: auto; */
 }
